Requests using dapper setup

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Database=DotNetCourseDatabase; Trusted_Connection=true; TrustServerCertificate=true"
+    "DefaultConnection": "Server=INSPIRO3\\SQLEXPRESS; Database=DotNetCourseDatabase; Trusted_Connection=true; TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
