Learning about user repository

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "PasswordKey":  "23213123o12uh3i21u3hi123h2iu34ggfjwoijroeigjeworgij"
+  }
 }
